# honeychrome

./: .gitignore  AppxManifest.xml  Makefile  README.md  README.rtf  _config.yml  analyse_imports.py  build.py  controller.py  create_dmg_mac.sh  entitlements.plist  experiment_model.py  honeychrome.iss  install_linux.sh  instrument_driver.py  main.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  trace_analyst.py
.github/: CODEOWNERS
.github/workflows/: build.yml
_includes/: head-custom-google-analytics.html  menu.md
assets/css/: style.css  style.scss
controller_components/: example_for_dummy_acquisition.fcs  exporter.py  spectral_controller.py  statistical_controller.py
docs/: acquisition.md  autospectral_in_honeychrome.md  conventional_analysis.md  cytometry_plots_and_gates.md  programming_plugins.md  reports.md  send_debug_data.md  spectral_analysis.md
hooks/: hook-flowkit.py  hook-numpy.py  runtime-optional-deps.py  runtime-patch-syspath.py
plugin_templates/: data_processing_example_plugin_tab.py
plugins/: data_processing_example_plugin_tab.py  example_plugin_tab.py  hello_world_example_plugin_tab.py
release notes/: Honeychrome v0_6_1 Release.txt  Honeychrome v0_7_0 Release.txt  Honeychrome v0_7_2 Release.txt  Honeychrome v0_7_3 Release.txt  Honeychrome v0_8_0 Release.txt  Honeychrome v0_8_2 Release.txt  Honeychrome v0_8_3 Release.txt
scripts_and_development_sandboxes/: app_controller.py  array_to_qpixmap.py  bar_charts.py  bounded_roi_examples.py  box_and_whisker.py  configuration_dialog_example.py  connect_over_usb.py  control_dockable.py  control_frame.py  create_plot_widget_example.py  data_models.py  dataframe_viewer.py  detached_widget.py  document.docx  equaliser.py  event_queue.py  example_new_sample_widget.py  file_model.py  gui_test.py  heatmap_example.py  heatmap_viewer_old.py  icons.py  interactive_cytometry_plot.py  layout_with_dock.py  legend.py  logger.py  main_window.py  multiprocess_example.py  mvctest.py  path_tree.py  pgtheme.py  pipeconnections.py  profile_view_example.py  pulsing_icon.py  pyplot_fill_under_line_custom_ticks.py  qsettings_clear.py  qtableview_heatmap_example.py  qworker_example.py  rotate_tick_labels.py  scrollable.py  (+12 more)
src/honeychrome/: __init__.py  controller.py  dummy_loader.py  experiment_model.py  instrument_communicator.py  instrument_driver.py  main.py  settings.py  tools.py  trace_analyst.py  view.py
src/honeychrome/bundled_plugins/: CMakeLists.txt  autospectral_opt_kernel_wrapper.py  autospectral_opt_pybind.cpp  autospectral_optimization_functions.py  autospectral_optimization_tab.py  build_autospectral_opt_kernel.py  core_joint_unmix.cpp  core_joint_unmix.hpp  plot_3d_tab.py
src/honeychrome/controller_components/: af_kernel.c  af_kernel_wrapper.py  autospectral_functions.py  build_af_kernel.py  cytometer_whitelist.py  dummy_instrument.py  exporter.py  functions.py  gating_instantiation.py  gating_templates.py  gml_functions_mod_from_flowkit.py  import_fcs_controller.py  label_matching.py  plugin_loaders.py  spectral_cleaning.py  spectral_controller.py  spectral_functions.py  spectral_librarian.py  spectral_reference_library.py  statistical_controller.py  transform.py  unmixed_exporter.py
src/honeychrome/data/: Aurora_spectral_reference_library.csv  Discover_spectral_reference_library.csv  ID7000_spectral_reference_library.csv  Mosaic_spectral_reference_library.csv  Opteon_spectral_reference_library.csv  Symphony_spectral_reference_library.csv  Xenith_spectral_reference_library.csv  cytometer_database.csv  fluorophore_database.csv  marker_database.csv
src/honeychrome/instrument_driver_components/: cytkit_configuration.py  cytkit_driver.py  dummy_driver.py  dummy_instrument.py  pico5000_driver.py
src/honeychrome/plugin_templates/: compare_transforms_tab.py  data_processing_example_plugin_tab.py  hello_world_example_plugin_tab.py  tabulate_sample_metadata_tab.py
src/honeychrome/view_components/: acquisition_widget.py  af_cleaning_viewer.py  autospectral_tab.py  batch_export_samples_modal.py  busy_cursor.py  clear_layout.py  configuration_dialogs.py  copyable_table_widget.py  cosine_qc_viewer.py  cytometry_grid_widget.py  cytometry_plot_components.py  cytometry_plot_widget.py  cytometry_toolbar.py  cytometry_toolbar_popout.py  event_bus.py  exportable_plot_widget.py  gains_widget.py  gating_hierarchy_widget.py  heatmap_viewedit.py  help_texts.py  help_toggle_widget.py  import_fcs_files_widget.py  main_window.py  new_file_dialog.py  new_plot_widget.py  new_sample_modal.py  nxn_grid.py  ordered_multi_sample_picker.py  oscilloscope_widget.py  profiles_viewer.py  regions_of_interest.py  sample_widget.py  scatter_cleaning_viewer.py  spectral_model_editor.py  splash_dialog.py  statistical_plotter.py
tests/: test_autospectral.py  test_controller.py  test_experiment_model.py  test_gui_integration.py  test_label_rename.py  test_nxn_grid_loader.py
tests/test_data/: Test sample lists for batch add samples.ods  sample list 1 column, no header, with error.csv  sample list 1 column, no header.csv  sample list 2 column with header.csv  sample list 3 column with header.csv  sample list single stain controls.csv
tests/ui/: conftest.py  test_load_fcs.py
view_components/: cytometry_grid_widget.py  event_bus.py  heatmap_viewedit.py  help_texts.py  help_toggle_widget.py  icon_loader.py  main_window.py  new_plot_widget.py  new_sample_modal.py  profiles_viewer.py  regions_of_interest.py  sample_widget.py  spectral_model_editor.py  splash_dialog.py
