[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "honeychrome"
version = "0.6.1"
description = "Open Source GUI App for Cytometry Acquisition and Analysis "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    'anytree==2.13.0',
    'bitarray==3.8.0',
    'bokeh==3.8.2',
    'certifi==2026.1.4',
    'charset-normalizer==3.4.4',
    'colorama==0.4.6',
    'colorcet==3.1.0',
    'contourpy==1.3.3',
    'cycler==0.12.1',
    'deepdiff==8.6.1',
    'python-docx==1.2.0',
    'FlowIO==1.4.0',
    'FlowKit==1.3.0',
    'FlowUtils==1.2.2',
    'fonttools==4.61.1',
    'ft4222==1.12.0',
    'idna==3.11',
    'Jinja2==3.1.6',
    'joblib==1.5.3',
    'kiwisolver==1.4.9',
    'lxml==6.0.2',
    'MarkupSafe==3.0.3',
    'matplotlib==3.10.8',
    'narwhals==2.15.0',
    'networkx==3.6.1',
    'numpy==2.4.1',
    'orderly-set==5.5.0',
    'packaging==25.0',
    'pandas==2.3.3',
    'pathvalidate==3.3.1',
    'pillow==12.1.0',
    'psutil==7.2.1',
    'pyarrow==22.0.0',
    'pyparsing==3.3.1',
    'pyqtgraph==0.14.0',
    'PySide6==6.10.1',
    'PySide6_Addons==6.10.1',
    'PySide6_Essentials==6.10.1',
    'python-dateutil==2.9.0.post0',
    'python-docx==1.2.0',
    'pytz==2025.2',
    'PyYAML==6.0.3',
    'requests==2.32.5',
    'scikit-learn==1.8.0',
    'scipy==1.17.0',
    'seaborn==0.13.2',
    'shiboken6==6.10.1',
    'six==1.17.0',
    'threadpoolctl==3.6.0',
    'tornado==6.5.4',
    'typing_extensions==4.15.0',
    'tzdata==2025.3',
    'urllib3==2.6.3',
    'xyzservices==2025.11.0'
]



[project.optional-dependencies]
dev = []

[project.scripts]
honeychrome = "honeychrome.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# Optional: Testing configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]